FIX: Corrected the style of H1 headings (XXL/Strong Space Grotesk + Blue Brand) and H2 headings (L/Strong Inter + Dark) to ensure consistent formatting and improved readability

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -91,26 +91,20 @@ h3 {
   font-feature-settings: 'ss03' on, 'ss04' on;
 }
 h2 {
-  -webkit-font-smoothing: antialiased;
   font-family: 'Inter', sans-serif;
-  font-weight: bold;
-  line-height: 52px;
-  font-size: 2.5rem;
-  font-feature-settings: 'ss03' on, 'ss04' on;
-  color:#0C1932;
-
-  @media (max-width: 1199px) {
-    font-size: 1.75rem;
-    line-height: 40px;
-  }
+  font-size: 20px !important;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 32px;
+  color: #0C1932;
 }
 h1 {
-  -webkit-font-smoothing: antialiased;
-  font-family: 'Space Grotesk', sans-serif;
-  font-weight: bold;
-  line-height: 4.5rem;
-  font-size: 4rem;
-  font-feature-settings: 'ss03' on, 'ss04' on;
+  font-family: 'SpaceGrotesk-Bold', sans-serif;
+  font-size: 40px !important;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 52px;
+  font-feature-settings: 'ss04' on, 'ss03' on;
   color: #0902a2;
 }
 .site-logo {
